# dvaita-scraper

./: .gitignore  pyproject.toml  requirements.txt
src/: arq_pool.py  config.py  export_markdown_for_review.py  main.py  migrate_data.py  worker.py
src/db/: mongo_client.py
src/models/: book.py  common.py  sutra.py
src/routes/: scraper_routes.py
src/tasks/: __init__.py  discovery.py  parsing.py  processing.py  worker.py
src/utils/: adaptive_logic.py  http_client.py  proxy_provider.py
