[project]
name = "dvaita-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "arq>=0.26.3",
    "bs4>=0.0.2",
    "devatrans>=5.0.1",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "motor>=3.7.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-slugify>=8.0.4",
    "redis>=5.2.1",
    "tenacity>=9.1.2",
]
